Fixed panel on small screen

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -72,7 +72,7 @@
   }
 
   &__panel {
-    position: absolute;
+    position: fixed;
     left:0;
     top:0;
     bottom:0;
